--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   database: recipe_app_dev
-  host: localhost
+  # host: localhost
   pool: 5
   timeout: 5000
 
@@ -9,13 +9,13 @@ production:
   # url: <%= ENV['DATABASE_URL'] %>
   adapter: postgresql
   database: recipe_app
-  host: localhost 
+  # host: localhost 
   pool: 5
   timeout: 5000
 
 test:
   adapter: sqlite3
   database: recipe_app_test
-  host: localhost 
+  # host: localhost 
   pool: 5
   timeout: 5000
